--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="https://cdn.jsdelivr.net/riot/3.1/riot+compiler.js"></script>
 
 	<script>
-		// Making the observable object accessible to all tags here.
+		//step1: Making the observable object accessible to all tags here.
 		var observable = riot.observable();
 
 		riot.mount('*');
